# bare-matter

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: main.rs
src/: buffer.rs  case_messages.rs  crypto.rs  der.rs  dns_sd.rs  dns_sd_codec.rs  fabric.rs  interaction_messages.rs  interaction_model.rs  lib.rs  message_codec.rs  pase_messages.rs  spake2p.rs  tlv_codec.rs  x509.rs
src/cluster/: general_commissioning_cluster.rs  mod.rs  operational_credentials_cluster.rs
src/endpoint/: mod.rs  on_off.rs  rootdevice.rs
src/protocol/: interaction_model.rs  mod.rs  secure_channel.rs
