[package]
name = "bare-matter"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.7.16"
log = "0.4.17"
critical-section = "1.1.1"

ccm = { version = "0.5.0", default-features = false }
aes = { version = "0.8.1", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
ecdsa = { version = "0.14.7", default-features = false }
p256 = { version = "0.11.1", default-features = false, features =["ecdh","ecdsa","arithmetic"] }
elliptic-curve = { version = "0.12.3", default-features = false, features =["ecdh","sec1","arithmetic"] }
hkdf = { version = "0.12.3", default-features = false }
hmac = { version = "0.12.1", default-features = false }
pbkdf2 = { version = "0.11.0", default-features = false }
crypto-bigint = { version = "0.4.8", default-features = false }

hex-literal = "0.3"

[dev-dependencies]
env_logger = "0.9.1"
crypto-bigint = { version = "0.4.8", features = [ "rand" ] }
socket2 = { version = "0.4.7", features = ["all"] }
critical-section = { version = "1.1.1", features = ["std"]}
